WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258871
[GStreamer] Video encoder reconfiguration fails
https://bugs.webkit.org/show_bug.cgi?id=258871
Summary
[GStreamer] Video encoder reconfiguration fails
Philippe Normand
Reported
2023-07-05 02:01:44 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-07-05 02:05:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15559
EWS
Comment 2
2023-07-06 04:05:31 PDT
Committed
265797@main
(371f9f1d6779): <
https://commits.webkit.org/265797@main
> Reviewed commits have been landed. Closing PR #15559 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-06 04:06:18 PDT
<
rdar://problem/111840844
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug