[GStreamer] Video encoder reconfiguration fails https://bugs.webkit.org/show_bug.cgi?id=258871

Reviewed by Xabier Rodriguez-Calvar.

We link videoconvert to videoscale and capsfilter, so unlinking also has to be done like this.

* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(videoEncoderSetEncoder):

Canonical link: https://commits.webkit.org/265797@main